--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,12 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer components {
+    .input-field {
+      @apply outline-none py-4 px-4 rounded-sm border flex-1 min-w-0;
+    }
+    .button {
+      @apply py-4 px-4 outline-none rounded-sm;
+    }
+}
